# hsircd

./: Ircd.hs  Main.hs  TODO  ircd.cabal
Ircd/: Client.hs  Command.hs  Config.hs  Core.hs  Peer.hs  Server.hs  Types.hs  Utils.hs
