Name:               hsircd
Version:            0.0.8
Cabal-version:      >=1.2
Synopsis:           An IRC server
Description:
  hsircd is an irc server written in haskell.
Homepage:           http://hsircd.adyxax.org/
License:            BSD3
License-file:       LICENSE
Author:             Julien Dessaux
Maintainer:         judessaux@gmail.com
Copyright:          Copyright (c) 2010 Julien Dessaux
Category:           Network
Build-type:         Simple


Library
  ghc-options: -Wall
  exposed-modules:  Ircd
                    Ircd.Command
                    Ircd.Config
                    Ircd.Core
                    Ircd.Peer
                    Ircd.Server
                    Ircd.Types
                    Ircd.Utils
  Extensions:       DeriveDataTypeable FlexibleContexts ScopedTypeVariables
  Build-depends:    base >= 4.1 && < 5,
                    bytestring,
                    certificate,
                    containers,
                    crypto-api,
                    cryptocipher,
                    dyre,
                    hslogger,
                    irc,
                    mtl,
                    network,
                    parsec3,
                    tls >= 0.4,
                    utf8-string


Executable hsircd
  Main-is:          Main.hs
  Ghc-options:      -Wall
  Extensions:       DeriveDataTypeable FlexibleContexts ScopedTypeVariables
  Build-depends:    base >= 4.1 && < 5

